    report and patch. (Closes: #689313)
  * deb822.Deb822.iter_paragraphs: Actually work with string input.
    Thanks to Stefano Rivera for the patch. (Closes: #647455)

  [ Stuart Prescott ]
  * Add myself to Uploaders.
  * Change Vcs-* URLs to canonical locations.
  * Switch build system to short form dh and pybuild.
  * Use nose to run test suite.
  * Add autopkgtest test suite.

 -- John Wright <jsw@debian.org>  Mon, 08 Oct 2012 00:41:32 -0700

python-debian (0.1.21+nmu3) unstable; urgency=medium

  * Non-maintainer upload.
  * Add support for xz-compressed packages. (Closes: #506861)
  * Byte-compile python modules for python3-debian. (Closes: #709935)

 -- Fathi Boudra <fabo@debian.org>  Tue, 29 Apr 2014 20:32:47 +0300

python-debian (0.1.21+nmu2) unstable; urgency=low

  * Non-maintainer upload.
  * In Python 2, restore Deb822Dict.has_key method for compatibility.
    (Closes: #686731)

 -- Colin Watson <cjwatson@debian.org>  Wed, 05 Sep 2012 11:28:58 +0100

python-debian (0.1.21+nmu1) unstable; urgency=low

  * Non-maintainer upload.
  * Port to Python 3. (Closes: #625509)

 -- Colin Watson <cjwatson@debian.org>  Wed, 22 Aug 2012 16:27:05 +0100

python-debian (0.1.21) unstable; urgency=low

  [ Tshepang Lekhonkhobe ]
  * test_changelog.py: Close open files. (Closes: #625672)

  [ John Wright ]
  * deb822: Allow ':' as the first character of a value.
    (Closes: #597249)
  * deb822: Avoid dumping unparseable data. (Closes: #597120)
  * Clean up deb822.GpgInfo implementation:
    - Change several @staticmethod decorated methods to @classmethod,
      since they call the class constructor.
    - from_sequence now can accept both sequences of newline-terminated
      strings and the output of str.splitlines().
    - from_file now actually calls the from_sequence method.
      (Closes: #627058)
    - from_sequence now makes a copy of the initial args list before
      extending it. (Closes: #627060)